Implement multilingual support with language detection and translations for Spanish, English, and French; update header and layout components accordingly.

--- a/src/components/Layout/Header.astro
+++ b/src/components/Layout/Header.astro
@@ -18,8 +18,9 @@ import logo from '../../assets/logos/koj_logo.png';
         <details>
           <summary><Image src={flagImg} alt="Language Selector Flag" class="w-8"></Image></summary>
           <ul class="bg-base-100 rounded-t-none p-2">
-            <li><a><Image src={flagImgP1} alt="Language Selector Flag" class="w-8"></Image></a></li>
-            <li><a><Image src={flagImgP2} alt="Language Selector Flag" class="w-8"></Image></a></li>
+            <li><a href="/es"><Image src={flagImg} alt="Language Selector Flag" class="w-8"></Image></a></li>
+            <li><a href="/en"><Image src={flagImgP1} alt="Language Selector Flag" class="w-8"></Image></a></li>
+            <li><a href="/fr"><Image src={flagImgP2} alt="Language Selector Flag" class="w-8"></Image></a></li>
           </ul>
         </details>
       </li>
