--- a/src/pages/espn/index.astro
+++ b/src/pages/espn/index.astro
@@ -36,7 +36,7 @@ const ratingTitle = "Nuestras Valoraciones";
 
 ---
 
-<Layout>
+<Layout lang="es">
   <Header flagImg={flag} flagImgP1={flagP1} flagImgP2={flagP2} currentLang={headerSection.currentLang} homeTxt={headerSection.homeTxt} cocktailsTxt={headerSection.cocktailsTxt} contactTxt={headerSection.contactTxt} />
   <Hero welcomeMsg={heroSection.welcomeMsg} mWords={heroSection.mWords} />
   <Separator />
