--- a/src/components/Layout/Separator.astro
+++ b/src/components/Layout/Separator.astro
@@ -3,4 +3,6 @@ import Image from "astro/components/Image.astro";
 import separatorImg from '../../assets/separator.webp';
 ---
 
-<Image src={separatorImg} alt="Separator" class="w-full h-auto" />
+<div class="overflow-x-clip w-full">
+  <Image src={separatorImg} alt="Separator" class="" />
+</div>
