--- a/src/components/RatingComponent/RatingSection.astro
+++ b/src/components/RatingComponent/RatingSection.astro
@@ -12,5 +12,6 @@ const {sectionTitle} = Astro.props;
   <div class="flex flex-col md:flex-row md:justify-around items-center pt-10 space-y-4 md:space-y-0 md:space-x-6">
     <RatingCard reviews={900} rating={"5.0"} imageSrc={googleLogo} orderNum={"5"} />
     <RatingCard reviews={900} rating={"5.0"} imageSrc={tripadvisorLogo} orderNum={"6"} />
+  <link href="https://awards.infcdn.net/2024/r_gold.css" rel="stylesheet"/><div id="b-gold" onclick="if(event.target.nodeName.toLowerCase() != 'a') {window.open(this.querySelector('.b-gold_r-link').href);return 0;}"> <a href="https://es.restaurantguru.com/King-Of-Judah-Reggae-Bar-Santa-Cruz-de-Tenerife" class="b-gold_r-link" target="blank">King of Judah Cocktails Reggae Bar</a> <p class="b-gold_center">Recomendado</p> <a href="https://restaurantguru.com" class="b-gold_link" target="_blank">Restaurant Guru</a> <p class="b-gold_year">2025</p></div>
   </div>
 </section>
