--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import ReviewModal from '../components/ReviewModal.astro';
 		<title>Astro Basics</title>
 	</head>
 	<body class="bg-linear-to-br from-green-950 via-yellow-900 to-red-950">
-		<ReviewModal client:idle lang={lang} reviewUrl={"https://g.page/r/CdWgY7k2Y3gGEAI/review"} />
+		<ReviewModal lang={lang} reviewUrl={"https://g.page/r/CdWgY7k2Y3gGEAI/review"} />
 		<slot />
 	</body>
 </html>
