--- a/src/components/RatingComponent/RatingCard.astro
+++ b/src/components/RatingComponent/RatingCard.astro
@@ -6,18 +6,18 @@ interface Props {
 	rating: string;
 	imageSrc: ImageMetadata;
 	orderNum: string;
+  href: string;
 }
 
-const { reviews, rating, imageSrc, orderNum } = Astro.props;
+const { reviews, rating, imageSrc, orderNum, href } = Astro.props;
 ---
-
-<div class="bg-white/10 flex  h-fit p-5 w-2/3 sm:w-1/4 justify-around">
+<a href={href} target="_blank" rel="noopener noreferrer" class="bg-white/10 flex  h-fit p-5 w-2/3 sm:w-1/4 justify-around">
   <div>
     <p class="text-5xl text-center font-bold">{rating}</p>
     <p class="text-center">{reviews} reviews</p>
   </div>
   <div class="flex flex-col gap-2 items-center justify-center">
-    <Image src={imageSrc} alt="Rating Logo" height={40} class="inline-block" />
+    <Image src={imageSrc} alt="Rating Logo" height={40} class="inline-block " />
     <div class="rating rating-sm">
       <input
         type="radio"
@@ -52,4 +52,4 @@ const { reviews, rating, imageSrc, orderNum } = Astro.props;
       />
     </div>
   </div>
-</div>
+</a>
